# part_management

./: CMakeLists.txt  PartManagament.qmlproject  PartManagament.qmlproject.qtds  qds.cmake
App/: CMakeLists.txt  backend.cpp  backend.h  main.cpp
App/autogen/: environment.h
PartManagament/: CMakeLists.txt  qmldir
PartManagament/designer/: plugin.metainfo
PartManagamentContent/: App.qml  App.qml.eEGbWr  CMakeLists.txt  FlickableTest.qml  PopupScreen.qml  PopupScreen.qml.VpEzoB  Screen01.qml  Screen01.qml.autosave.PcTyWk
